testsuite/tests/name_resolution/non_visible_dependency/test.out
Analyzing foo.ads
#################

Analyzing test.adb
##################

Resolving xrefs for node <CallStmt test.adb:3:4-3:12>
*****************************************************

test.adb:3:4: error: cannot find name 'Foo'
3 |    Foo.Bar;
  |    ^^^


Expected name resolution failure for node <CallStmt test.adb:3:4-3:12>


Done.
